# news-scanner

./: helper.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  actions.js  index.css  index.js  reducer.js  selectors.js  socket.js  store.js
frontend/src/components/Modal/: index.js  styles.css
frontend/src/components/News/: index.js  styles.css
frontend/src/components/Topics/: index.js  styles.css
